--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DeviceDetailActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".DeviceDetailActivity" />
         <activity android:name=".List" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -18,8 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
